<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014 Carbon Development

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">About Carbon</string>
    <string name="about_carbon_rom">AfterMarket Android ROM</string>
    <string name="maintainers_title">Maintainers</string>
    <string name="maintainers_version_text">listed in no particular order</string>
    <string name="finish_button_text">Finish</string>
    <string name="back_button_text">Back</string>
    <string name="next_button_text">Next</string>
    <string name="menu_exit">Exit</string>

    <!-- Tabs -->
    <string name="about_title">About</string>
    <string name="features_title">Features</string>
    <string name="carbon_main_members">Core Team</string>
    <string name="carbon_developers">Developers</string>
    <string name="carbon_maintainers">Maintainers</string>
    <string name="carbon_team">Team Meetup</string>
    <string name="carbon_changelog">Changelog</string>

    <!-- Carbon Team -->
    <string name="carbon_title">Carbon Team</string>
    <string name="carbon_version_text"></string>

    <!-- Drawer dependency -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_toggle">Toggle Drawer</string>
    <string name="toggle_back_cfibers">Back</string>

    <!-- Layout dev_card strings -->
    <string name="donate">Donate</string>
    <string name="email">Email</string>
    <string name="googleplus">Google+</string>
    <string name="github">Github</string>
    <string name="twitter">Twitter</string>

    <string name="status_dev">Developer</string>
    <string name="status_designers">Designer</string>
    <string name="status_pr">Public Relations &amp; Social Media</string>
    <string name="status_gerrit">Gerrit Maintainer</string>
    <string name="status_core_dev">Core Developer</string>
    <string name="status_dev_and_co_founder">Developer / Co-Founder</string>

    <!-- Changelog -->
    <string name="changelog_url">https://carbonrom.org/changelog/</string>
    <string name="changelog_not_connected_msg">Please connect to the internet and try again.</string>
    <string name="changelog_not_connected_title">No network connection</string>

    <!-- URLs -->
    <string name="cr_website_title">Visit our website</string>
    <string name="cr_donate_title">Donate to CarbonDev</string>

    <!-- Device settings -->
    <string name="device_settings_title">Device</string>
    <string name="devicesettings_app_summary">Configure device specific options</string>

    <!-- Advanced Settings -->
    <string name="advanced_options_title">Advanced options</string>
    <string name="touch_screen_gesture_title">Touch Screen Gestures Device</string>
    <string name="touch_screen_gesture_summary">Touch Screen Gestures Device options</string>

</resources>
