<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:carbon="http://schemas.android.com/apk/res/com.android.settings">

        <com.carbon.fibers.widget.DeveloperPreference
            carbon:nameDev="Adam &quot;PantherHeel93&quot; Sambuco"
            carbon:statusDev="@string/status_designers"
            carbon:googleHandle="-lU548hmhN9g/UrOsNMMiagI/AAAAAAAABwY/q_LZbjoOG4E/w720-h719-no/"
            carbon:googleProfile="108778167441489933514" />

        <com.carbon.fibers.widget.DeveloperPreference
            carbon:nameDev="Ahmed &quot;Bionic Beast&quot; Khalil"
            carbon:statusDev="@string/status_pr"
            carbon:googleHandle="-NONqP20EsV8/UVqIIzeK50I/AAAAAAAACcM/BUjGumKG9_8/s309-no/"
            carbon:googleProfile="112969077631740414020"
            carbon:emailDev="support@carbonrom.org" />

        <com.carbon.fibers.widget.DeveloperPreference
            carbon:nameDev="Andros &quot;Knight of Carbon&quot; Rosa"
            carbon:deviceStat="Galaxy S3 (i9300), I997"
            carbon:statusDev="@string/status_core_dev"
            carbon:googleHandle="-0CXdeEtrWmc/UqlZ-Jfh8oI/AAAAAAAAANc/uS1Rirs6J1w/w721-h719-no/"
            carbon:googleProfile="111721285589066146000"
            carbon:githubLink="http://github.com/andros11"
            carbon:emailDev="andros2011@gmail.com" />

        <com.carbon.fibers.widget.DeveloperPreference
            carbon:nameDev="Damien &quot;pixeldotz&quot; Deaucali"
            carbon:statusDev="@string/status_designers"
            carbon:googleHandle="-E86Lt5_d0VY/UdH1e3-RKMI/AAAAAAAAAsY/udWF9rlqyEA/s363-no/"
            carbon:googleProfile="106985547279703270477" />

        <com.carbon.fibers.widget.DeveloperPreference
            carbon:nameDev="Daniel &quot;daxx&quot; Max"
            carbon:deviceStat="HTC One (m7xx), Oppo N1 (n1)"
            carbon:statusDev="@string/status_core_dev"
            carbon:googleHandle="-dJa8pU-ouUE/U0qY-IcxoSI/AAAAAAAAGx0/zM-eQEgNHwk/s719-no/"
            carbon:googleProfile="115569516936113574583"
            carbon:githubLink="http://github.com/daxxmax"
            carbon:emailDev="daxx4182@gmail.com"
            carbon:twitterLink="daxxmax" />

        <com.carbon.fibers.widget.DeveloperPreference
            carbon:nameDev="David &quot;PhaseBurn&quot; Bauman"
            carbon:deviceStat="Nexus 4 (mako), Nexus 10 (manta)"
            carbon:statusDev="@string/status_core_dev"
            carbon:googleHandle="-VJ3b_Jcu7UU/UWXOeG1aZ1I/AAAAAAAAWRk/ztCPeFBUg0A/s48-no/"
            carbon:googleProfile="101891874131763807773"
            carbon:githubLink="http://github.com/phaseburn"
            carbon:emailDev="phaseburn@phaseburn.net"
            carbon:twitterLink="phaseburn" />

        <com.carbon.fibers.widget.DeveloperPreference
            carbon:nameDev="Derek &quot;dg4prez&quot; Gelinas"
            carbon:statusDev="@string/status_dev_and_co_founder"
            carbon:googleHandle="-F-hAPje6WpM/ThUTEZoUu4I/AAAAAAAADm0/okgfS7wlhdU/s358-no/"
            carbon:googleProfile="114660037306973840401"
            carbon:githubLink="http://github.com/dg4prez"
            carbon:emailDev="mrdgelinas@gmail.com" />

        <com.carbon.fibers.widget.DeveloperPreference
            carbon:nameDev="John &quot;interloper&quot; Kirk"
            carbon:deviceStat="Galaxy S3 DoCoMo (d2dcm)"
            carbon:statusDev="@string/status_core_dev"
            carbon:googleHandle="-_L6LghbsRyY/UztCedd8UwI/AAAAAAAATRQ/gKoVAAkazro/s719-no/"
            carbon:googleProfile="105123805981409687545"
            carbon:githubLink="http://github.com/xInterlopeRx"
            carbon:emailDev="jkirk777@gmail.com"
            carbon:twitterLink="xInterloper777x" />

        <com.carbon.fibers.widget.DeveloperPreference
            carbon:nameDev="Matt &quot;mattmanwrx&quot; Bloomfield"
            carbon:deviceStat="HTC One X (endeavoru), Galaxy Note 3 LTE (hltexx), Galaxy Note (n7000)"
            carbon:statusDev="@string/status_core_dev"
            carbon:googleHandle="-qEwK2SBxK8o/Th9L165yZpI/AAAAAAAAAKY/5isvriEguhw/w303-h302-no/"
            carbon:googleProfile="115194825327804536850"
            carbon:githubLink="http://github.com/mattmanwrx"
            carbon:emailDev="webmaster@mattman.org"
            carbon:twitterLink="_mattmann"  />

        <com.carbon.fibers.widget.DeveloperPreference
            carbon:nameDev="Patrick &quot;pcamp123&quot; Campanale"
            carbon:statusDev="@string/status_designers"
            carbon:googleHandle="-caI6LqDDdXQ/Ur5RNmHg_TI/AAAAAAAAJtk/qfkjWiSlFgw/w722-h719-no/"
            carbon:googleProfile="112082828842151104248" />

        <com.carbon.fibers.widget.DeveloperPreference
            carbon:nameDev="Ricky &quot;slick_rick&quot; Salinas"
            carbon:statusDev="@string/status_core_dev"
            carbon:googleHandle="-tk8maFZvMZ0/Ua7aaKXsdmI/AAAAAAAABjM/uYGgo3G9nuc/s420-no/"
            carbon:googleProfile="104728329553291412498"
            carbon:githubLink="http://github.com/slickrick"
            carbon:emailDev="rsalinas1@mail.usf.edu" />

        <com.carbon.fibers.widget.DeveloperPreference
            carbon:nameDev="Robert &quot;bigshotrob22&quot; Rascon"
            carbon:statusDev="@string/status_dev"
            carbon:deviceStat="Galaxy S3 Variant (d2xxx), LG G2 (vs980)"
            carbon:googleHandle="-Xc03emHO9vk/Ux6rQF5Nn-I/AAAAAAAAX_o/2ImpjfstgxY/s256-no/"
            carbon:googleProfile="101779483513094545241"
            carbon:githubLink="http://github.com/bigshotrob22"
            carbon:emailDev="rrascon22@gmail.com"
            carbon:twitterLink="bigshotrob22" />

        <com.carbon.fibers.widget.DeveloperPreference
            carbon:nameDev="Tom &quot;nocoast&quot; Dulin"
            carbon:statusDev="@string/status_dev_and_co_founder"
            carbon:googleHandle="-nC69ReSzXFo/UHlGoSgpsFI/AAAAAAAABEU/Qg49E1mgy_w/s256-no/"
            carbon:googleProfile="105296412157353903888"
            carbon:githubLink="http://github.com/nocoast"
            carbon:twitterLink="n0coast" />

        <com.carbon.fibers.widget.DeveloperPreference
            carbon:nameDev="Tylar &quot;winner00&quot; Overturf"
            carbon:deviceStat="Nexus 7 2012'13, Galaxy Nexus (tuna), Nexus 5 (hammerhead)"
            carbon:statusDev="@string/status_core_dev"
            carbon:googleHandle="-6vWcrqDfnII/Ugs2-8aQBnI/AAAAAAAAA6A/3iQEDoqsv6A/s319-no/"
            carbon:googleProfile="106513914946845471488"
            carbon:githubLink="http://github.com/winner00"
            carbon:emailDev="toverturf@gmail.com"
            carbon:twitterLink="expertontech" />

</PreferenceScreen>
